[gd_scene load_steps=9 format=3 uid="uid://buqfn2kftowtw"]

[ext_resource type="Script" uid="uid://ba5ln7db2u22n" path="res://level/interactable/pressing_plate/pressing_plate.gd" id="1_4ydcu"]
[ext_resource type="Material" uid="uid://cyiptc4e0kgbt" path="res://level/interactable/pressing_plate/carpet.tres" id="1_lb0ng"]

[sub_resource type="BoxShape3D" id="BoxShape3D_lb0ng"]
margin = 0.0
size = Vector3(3, 0.2, 2)

[sub_resource type="BoxMesh" id="BoxMesh_mynbq"]
material = ExtResource("1_lb0ng")
size = Vector3(3, 0.2, 2)

[sub_resource type="Animation" id="Animation_4ydcu"]
resource_name = "press"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.1, 0), Vector3(0, -0.09, 0)]
}

[sub_resource type="Animation" id="Animation_o8fby"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.1, 0)]
}

[sub_resource type="Animation" id="Animation_tnlpe"]
resource_name = "unpress"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, -0.09, 0), Vector3(0, 0.1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o8fby"]
_data = {
&"RESET": SubResource("Animation_o8fby"),
&"press": SubResource("Animation_4ydcu"),
&"unpress": SubResource("Animation_tnlpe")
}

[node name="PressingPlate" type="Node3D"]
script = ExtResource("1_4ydcu")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 128
collision_mask = 10

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
shape = SubResource("BoxShape3D_lb0ng")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
mesh = SubResource("BoxMesh_mynbq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o8fby")
}

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
